# my-tool

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
cli/: Cargo.toml
dump/: Cargo.toml
dump/src/: decode.rs  decrypt.rs
ff-tool/: Cargo.toml  main.rs
ncm/: Cargo.toml
ncm-tool/api/: Cargo.toml
ncm-tool/api/src/: auth.rs  client.rs  crypto.rs  lib.rs  playlist.rs  search.rs  track.rs  types.rs  user.rs
ncm-tool/cli/: Cargo.toml
ncm-tool/cli/src/: main.rs
ncm-tool/dump/: Cargo.toml
ncm-tool/dump/src/: decode.rs  decrypt.rs  dump.rs  lib.rs  util.rs
ncm-tool/ncm/src/: audioformat.rs  lib.rs  metadata.rs  ncmfile.rs
ncm/src/: ncmfile.rs
