[workspace]
resolver = "3"
members = ["ncm-tool/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
snafu = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json", "socks"] }
serde_json = "1.0.149"
aes = "0.8"
base64 = "0.22.1"
