[package]
name = "ff-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ff-tool"
path = "main.rs"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tar = "0.4"
lzma-rust2 = "0.16.2"
snafu = { workspace = true }
