[package]
name = "ncmapi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = { workspace = true }
base64 = { workspace = true }
num-bigint = "0.4"
rand = "0.9"
reqwest = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
urlencoding = "2"
cbc = "0.1"
http = "1.4.0"