[package]
name = "ncmdump"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ncmformat = { version = "0.1.0", path = "../ncm" }
snafu = { workspace = true }
aes = "0.8"
base64 = "0.22.1"
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
lofty = "0.23.2"
log = "0.4.29"
walkdir = "2.5.0"
