[package]
name = "ncmdump"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ncmformat = { version = "0.1.0", path = "../ncm" }
snafu = { workspace = true }
aes = { workspace = true }
base64 = { workspace = true }
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
lofty = "0.23.2"
log = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
